[tool.poetry]
name = "pixels-write-exchange"
version = "0.1.0"
description = "A writes exchange for pixels.pythondiscord.com"
authors = ["Bast0006"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.14.2"
rich = "^10.2.2"
pony = "^0.7.14"
aiohttp = "^3.7.4"
python-dotenv = "^0.17.1"
uvicorn = "^0.13.4"
numpy = "^1.20.3"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
